Added a home page and organised routing some more

--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -10,3 +10,11 @@
 .github__card:hover {
   transform: scale(1.01);
 }
+
+.github__link {
+  color: black;
+  
+}
+.github__link:hover {
+   color: black;
+}
