--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -8,9 +8,7 @@
 }
 
 .github__animation {
-  animation:
-    move 1s,
-    fade 1.5s;
+  animation-duration: 3s;
 }
 
 .github__card:hover {
@@ -23,14 +21,4 @@
 }
 .github__link:hover {
    color: black;
-}
-
-@keyframes move {
-  from { top: 100vh; left: 0; }
-  to   { top: 0; left: 0; }
-}
-
-@keyframes fade {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
 }
