--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -2,12 +2,14 @@
   max-height: 300px;
   min-height: 100px;
   min-width: 90vw;
-  max-width: 95vw;
+  max-width: 90vw;
   margin-bottom: 20px;
   margin-top: 20px;
   margin-right: 40px;
   margin-left: 40px;
   transition: transform .2s;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #a9aaad;
 }
 
 .row {
@@ -27,7 +29,7 @@
 
 .github__card:hover {
   transform: scale(1.01);
-  background-color: WhiteSmoke;
+  background-color: #939599;
 }
 
 .github__link {
