--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -40,3 +40,11 @@
 .github__link:hover {
    color: black;
 }
+
+.grade__cardbody {
+  background-color: #a9aaad;
+  outline-style: solid;
+  outline-color: #a9aaad;
+  padding: 0px;
+  padding-left: 30px;
+}
