--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -12,6 +12,15 @@
   background-color: #a9aaad;
 }
 
+.github__card.is-hidden {
+  visibility: hidden;
+}
+
+.github__card.zoom-in {
+  visibility: visible;
+  animation: cd-bounce-1 0.6s;
+}
+
 .row {
   min-width: 90vw;
 }
@@ -47,4 +56,32 @@
   outline-color: #a9aaad;
   padding: 0px;
   padding-left: 30px;
+}
+
+@keyframes cd-bounce-1 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.7);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.05);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
 }
