--- a/frontend/src/styles/Navigation.css
+++ b/frontend/src/styles/Navigation.css
@@ -3,24 +3,28 @@
     list-style-type: none;
     padding: 0px;
     background-color: #282c34 !important;
-    position: sticky;
+    position: fixed;
     top: 0px;
     width: 100%;
     z-index: 100;
 }
 
 .navbar__small {
-  transition: all 0.1s linear 0.1s;
+  transition: all 0.2s ease-in-out;
+
   min-height: 5vh;
 }
 
 .navbar__big {
-  transition: all 0.1s linear 0.1s;
-  min-height: 10vh;
+  transition: all 0.2s ease-in-out;
+  min-height: 8vh;
+  font-size: 20px !important;
+  background-color: transparent !important;
 }
 
 .navbar-brand {
   color: white !important;
+  font-size: inherit;
 }
 
 .navbar-brand:hover {
