--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -23,6 +23,32 @@
   color: #61dafb;
 }
 
+.particle {
+  width:100%;
+  height: 86vh;
+}
+
+.border1 {
+  border-color: #3e4451 !important;
+  width:100%;
+  height:100px;
+  border-bottom-left-radius:50%;
+  border-bottom-right-radius:50%;
+  position: absolute;
+  z-index: 10;
+  background-color: inherit;
+}
+
+.navigate__arrow {
+  height: 40px;
+  width: 40px;
+  transition: transform 0.2s;
+}
+
+.navigate__arrow:hover {
+  transform: scale(1.3);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
