--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -3,6 +3,15 @@
   padding-top: 8vh;
 }
 
+body {
+  font-family: MyFont !important;
+}
+
+@font-face {
+  font-family: 'MyFont';
+  src: local('MyFont'), url(../static/fonts/ReqnadGeometrikBeta0.1-Regular.otf) format('woff');
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
