--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Unlock', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,4 +10,9 @@ body {
 }
 .subheading {
   font-weight: 300;
+}
+
+@font-face {
+  font-family: 'MyFont';
+  src: local('MyFont'), url(../static/fonts/MyFont.ttf) format('ttf');
 }
