Adding cleaner animations

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -9,7 +9,7 @@ body {
 
 @font-face {
   font-family: 'MyFont';
-  src: local('MyFont'), url(../static/fonts/ReqnadGeometrikBeta0.1-Regular.otf) format('woff');
+  src: local('MyFont'), url(../static/fonts/Cache-Oblique.ttf) format('woff');
 }
 
 .App-logo {
