--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -36,6 +36,31 @@
   zindex: 20;
 }
 
+.inside__style-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  zindex: 20;
+}
+
+.started {
+  fill: transparent;
+}
+
+.finsihed {
+  fill: url(#linear);
+}
+
+@keyframes background_anim {
+  from {
+    fill: transparent;
+  },
+  to {
+    fill:
+  }
+}
+
 @font-face {
   font-family: 'MyFont';
   src: local('MyFont'), url(../static/fonts/Cache-Oblique.ttf) format('woff');
