--- a/frontend/src/styles/Navigation.css
+++ b/frontend/src/styles/Navigation.css
@@ -11,32 +11,38 @@
 
 .navbar__small {
   transition: all 0.2s ease-in-out;
-
   min-height: 5vh;
 }
 
 .navbar__big {
   transition: all 0.2s ease-in-out;
   min-height: 8vh;
-  font-size: 20px !important;
+  font-size: 20px;
   background-color: transparent !important;
 }
 
-.navbar-brand {
+.navbar__header {
+}
+
+.navbar__item {
+}
+
+.nav__header {
   color: white !important;
   font-size: inherit;
 }
 
-.navbar-brand:hover {
+.nav__header:hover {
   color: LightGrey !important;
 }
 
-.nav__link {
+.nav__item {
   color: white !important;
-  text-decoration: none;
+  text-decoration: none !important;
+  padding: 10px;
 }
 
-.nav__link:hover {
+.nav__item:hover {
   color: LightGrey !important;
   text-decoration: none;
 }
