--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -27,10 +27,13 @@
 
 .particle {
   width:100%;
-  height: 86vh;
+  height: 92vh;
 }
 
 .navigate__arrow {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
   height: 40px;
   width: 40px;
   transition: transform 0.2s;
