--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -5,22 +5,33 @@
 .rectangle {
   height: 2px;
   width: 80px;
-  background-color: black;
+  background-color: #3e4451;
 }
 
 .home__title {
+  position: fixed;
   pointer-events: none;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+  max-width:100%;
+  max-height:100%;
 }
 
-.home__border {
-  border-color: #3e4451 !important;
+.particle {
   width:100%;
-  height:100px;
-  border-bottom-left-radius:50%;
-  border-bottom-right-radius:50%;
-  position: absolute;
-  z-index: 10;
-  background-color: inherit;
+  height: 92vh;
+  position: fixed;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+}
+
+.static__holder {
+  height: 100vh;
+  background-color: #3e4451;
 }
 
 .inside__style {
@@ -37,8 +48,9 @@
 }
 
 .inside__style-content {
+  height: 100vh;
   position: absolute;
-  top: 50%;
+  top: 100%;
   left: 50%;
   transform: translate(-50%,-50%);
   zindex: 20;
