--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,10 +1,4 @@
-.App {
-  background-color: #3e4451;
-}
-
-.rectangle {
-  height: 2px;
-  width: 80px;
+.home {
   background-color: #3e4451;
 }
 
@@ -15,8 +9,27 @@
   right:0;
   top:0;
   bottom:0;
-  max-width:100%;
-  max-height:100%;
+  width:100%;
+  height: 92vh;
+}
+
+.started {
+
+}
+
+.back__arrow {
+  position: fixed;
+  left:0;
+  right:0;
+  top:50%;
+  z-index: 1;
+}
+
+.forward__arrow {
+  position: fixed;
+  right:0;
+  top:50%;
+  z-index: 1;
 }
 
 .particle {
@@ -27,6 +40,7 @@
   right:0;
   top:0;
   bottom:0;
+  background-color: #3e4451;
 }
 
 .static__holder {
@@ -52,6 +66,7 @@
 .center {
   display: table-cell;
   vertical-align: middle;
+  font-family: MyFont;
 }
 
 @font-face {
