--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -5,12 +5,21 @@
 .home__title {
   position: fixed;
   pointer-events: none;
-  left:0;
+  left:0px;
   right:0;
   top:0;
   bottom:0;
   width:100%;
   height: 92vh;
+}
+
+.ship {
+  position: absolute;
+  pointer-events: none;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
 }
 
 .started {
